--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,47 @@
 /* Ini CSS */ 
+nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+nav>section {
+    display: flex;
+}
+
+.logo-icon {
+    height: 50px;
+    width: 50px;
+    border: 1px solid black;
+    border-radius: 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.nav-item {
+    border: 1px solid black;
+    padding: 8px;
+}
+
+.banner-container {
+    height: 258px;
+    border: 1px solid black
+}
+
+.facility-list {
+    display: flex;
+    justify-content: space-around;
+}
+
+.form-result {
+    height: 100px;
+    border: 1px solid black;
+}
+
+.message-us-section {
+    display: flex;
+}
+
+.result-container {
+    width: 100%;
+   
+}
