--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,8 @@
 /* Ini CSS */ 
+html {
+    scroll-behavior: smooth;
+  }
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -8,40 +12,250 @@ nav>section {
     display: flex;
 }
 
-.logo-icon {
-    height: 50px;
-    width: 50px;
-    border: 1px solid black;
-    border-radius: 50%;
+body {
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    background-image: url(assets/1dd95285f63d17901452ec8c17e98dec.jpg);
+}
+
+.logo-icon {
+    height: 70px;
+    width: 200px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url('assets/skullnime-logo-removebg-preview.png');
+    margin-left: 2%;
+}
+
+.nav-item-li {
+    margin-right: 4%;
 }
 
 .nav-item {
-    border: 1px solid black;
+    align-self: center;
+    text-decoration: none;
+    color: white;
     padding: 8px;
+    position: relative;
+    display: inline-block;
+    transition: transform 0.5s ease, width 0.3s ease;
+}
+
+.nav-item::before,
+.nav-item::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 3px;
+    bottom: 0;
+    background-color:  rgb(252, 67, 46);
+    transition: width 0.3s ease;
+}
+
+.nav-item:hover {
+    color: rgb(252, 67, 46);;
+    transform: scale(1.2);
+}
+
+.nav-item::before {
+    left: 40%;
+}
+
+.nav-item::after { 
+    right: 40%;
+}
+
+.nav-item:hover::before {
+    width: 40%;
+}
+
+.nav-item:hover::after {
+    
+    width: 40%;
+}
+
+.top-banner {
+    margin-left: 6%;
+    color: white;
 }
 
 .banner-container {
-    height: 258px;
-    border: 1px solid black
+    height: 500px;
+    width: 95%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url(assets/ezgif-2-2d1559e952.gif);
 }
 
-.facility-list {
+.link-li {
     display: flex;
     justify-content: space-around;
 }
 
-.form-result {
-    height: 100px;
-    border: 1px solid black;
+.mid-info header {
+    margin-left: 6%;
+}
+.mid-info {
+    color: white;
+}
+
+.ikon-link {
+    width: 50px; 
+    height: 50px; 
+    border: 1px solid white;
+    margin-left: 15px;
+}
+
+#mal-logo {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url('assets/MyAnimeList_Logo.png');
+}
+
+#novel-logo {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url('assets/idU9YIU00r.png');
+}
+
+#manga-logo {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url('assets/images.jpeg');
+}
+
+.mal {
+    cursor: pointer;
+    transition: transform 0.5s ease, width 0.3s ease;
+}
+
+.mal:hover {
+    color: rgb(252, 67, 46);
+    transform: scale(1.1);
+}
+
+.novel {
+    cursor: pointer;
+    transition: transform 0.5s ease, width 0.3s ease;
+}
+
+.novel:hover {
+    color: rgb(252, 67, 46);
+    transform: scale(1.1);
+}
+
+.manga {
+    cursor: pointer;
+    transition: transform 0.5s ease, width 0.3s ease;
+}
+
+.manga:hover {
+    color: rgb(252, 67, 46);
+    transform: scale(1.1);
 }
 
 .message-us-section {
     display: flex;
 }
 
+.message {
+    margin-left: 6%;
+    color: white;
+}
+
+.form-row {
+    display: flex;
+}
+
+.form-info {
+    float: left;
+    width: 25%;
+}
+
+.form-input {
+    float: left;
+    width: 75%;
+}
+
+.pesan-text {
+    resize: none;
+    width: 300px;
+    height: 120px;
+    border-radius: 10px;
+    padding: 3px 5px;
+}
+
+
+
+.label, input[type=text], select, .pesan-text {
+    vertical-align: top;
+}
+
+input[type=text], select {
+    height: 25px;
+    border-radius: 10px;
+    width: 300px;
+    padding: 3px 5px;
+}
+
+input[type=submit] {
+    background-color: rgb(252, 67, 46);
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+    margin-top: 18px;
+    margin-left: 25%;
+  }
+  
+  input[type=submit]:hover {
+    background-color: rgb(182, 21, 3);
+  }
+
+.form-result {
+    height: 220px;
+    align-content: center;
+}
+
 .result-container {
+    margin-left: 10%;
     width: 100%;
    
 }
+
+.result-text {
+    resize: none;
+    width: 85%;
+    height: 90%;
+    border-radius: 10px;
+    padding: 3px 5px;
+}
+
+
+footer {
+    height: 70px;
+    width: 100%;
+    align-content: center;
+    text-align: end;
+    color: white;
+    margin-right: 10%;
+    margin-bottom: 5px;
+}
+
+footer label {
+    margin-right: 5%;
+}
+ 
